[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-pipeline-builder"
version = "1.0.0"
description = "Tabular AutoML framework that cleans data, engineers features, trains dynamic ensembles, and selects optimal models."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
